--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,7 @@
 @import "./component/index.scss";
 @import "./icon/index.scss";
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
