--- a/src/styles/component/login.scss
+++ b/src/styles/component/login.scss
@@ -19,6 +19,7 @@
     align-items: center;
     padding: 60px 0 60px 0;
     .login-body-window {
+      display: flex;
       flex-direction: column;
       width: 751px;
       left: 265px;
@@ -26,6 +27,13 @@
 
       background: rgba(123, 61, 152, 0.8);
       border-radius: 50px;
+
+      svg {
+        fill: rgba(123, 61, 152, 0.8);
+        position: absolute;
+        margin-left: 40px;
+        margin-top: -67px;
+      }
       .login-body-window-title {
         padding-top: 60px;
         font-family: "Roboto";
@@ -65,7 +73,7 @@
               font-weight: 600;
               font-size: 16px;
               text-align: right;
-
+              cursor: pointer;
               color: #ffffff;
             }
           }
@@ -132,18 +140,47 @@
           cursor: pointer;
         }
         .login-body-window-enter-others {
+          margin-top: 36px;
+          margin-bottom: 30px;
           .login-body-window-enter-others-title {
-            font-family: "Roboto";
-            font-style: normal;
-            font-weight: 600;
-            font-size: 16px;
-            /* identical to box height */
-            text-align: center;
-            letter-spacing: 0.1em;
+            display: flex;
+            justify-content: center;
+            .login-body-window-enter-others-title-text {
+              font-family: "Roboto";
+              font-style: normal;
+              font-weight: 600;
+              font-size: 16px;
+              /* identical to box height */
+              text-align: center;
+              letter-spacing: 0.1em;
+              cursor: pointer;
 
-            color: #ffffff;
-            svg {
-              fill: #ffffff;
+              color: #ffffff;
+              svg {
+                fill: #ffffff;
+              }
+            }
+          }
+          .login-body-window-enter-others-button {
+            margin-top: 16px;
+            display: flex;
+            flex-direction: column;
+            gap: 22px;
+            .login-body-window-enter-others-button-background {
+              height: 66px;
+              background: #7b3d98;
+              border-radius: 20px;
+              cursor: pointer;
+              .login-body-window-enter-others-button-background-text {
+                font-family: "Roboto";
+                font-style: normal;
+                font-weight: 600;
+                font-size: 20px;
+                text-align: center;
+                letter-spacing: 0.1em;
+
+                color: rgba(255, 255, 255, 0.8);
+              }
             }
           }
         }
