--- a/src/styles/component/login.scss
+++ b/src/styles/component/login.scss
@@ -157,6 +157,8 @@
 
               color: #ffffff;
               svg {
+                position: relative;
+                margin: 0;
                 fill: #ffffff;
               }
             }
