--- a/src/styles/component/login.scss
+++ b/src/styles/component/login.scss
@@ -129,6 +129,7 @@
         .login-body-window-enter-others {
           margin-top: 36px;
           margin-bottom: 30px;
+          transition: 0.5s;
           .login-body-window-enter-others-title {
             display: flex;
             justify-content: center;
