--- a/src/styles/component/index.scss
+++ b/src/styles/component/index.scss
@@ -1,3 +1,6 @@
 @import "./app.scss";
 @import "./header.scss";
 @import "./login.scss";
+@import "./post.scss";
+@import "./home.scss";
+@import "./card.scss";
