--- a/src/styles/component/login.scss
+++ b/src/styles/component/login.scss
@@ -1,6 +1,9 @@
 .login {
+  height: 100vh;
+
   .login-body {
     display: flex;
+    height: 100%;
     background: rgba(189, 78, 199, 0.2);
     justify-content: center;
     align-items: center;
@@ -36,7 +39,7 @@
         fill: rgba(123, 61, 152, 0.8);
         position: absolute;
         margin-left: 40px;
-        margin-top: -67px;
+        top: 0;
       }
       .login-body-window-title {
         padding-top: 60px;
@@ -90,6 +93,7 @@
             .login-body-window-enter-from-input-enter {
               width: 95%;
               margin-left: 30px;
+              padding-right: 20px;
               border-style: none;
               background-color: transparent;
               outline: none;
