--- a/src/styles/component/card.scss
+++ b/src/styles/component/card.scss
@@ -6,6 +6,7 @@
 
   padding: 15px 13px 13px 15px;
   .card-container {
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,6 +19,8 @@
       }
     }
     .card-preview-text {
+      margin-top: 15px;
+      flex: 1;
       & > p {
         font-family: "Roboto";
         font-style: normal;
@@ -38,18 +41,18 @@
     }
 
     .card-preview-title {
+      flex: 1;
       font-family: "Roboto";
       font-style: normal;
       font-weight: 700;
       font-size: 16px;
-      line-height: 148.52%;
       /* or 24px */
 
       letter-spacing: 0.14em;
 
       color: #fefefe;
 
-      margin: 16px;
+      margin: 16px 0;
     }
     .card-rate {
       width: 67px;
