--- a/src/styles/component/post.scss
+++ b/src/styles/component/post.scss
@@ -1,12 +1,14 @@
 .post {
+  top: 57px;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: rgba(189, 78, 199, 0.2);
-
+  padding: 30px 0;
   .post-window {
+    margin-top: 5rem;
     display: flex;
     flex-direction: column;
 
