--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "./component/index.scss";
 @import "./icon/index.scss";
-@import "./font.scss";
+@import "./font.module.scss";
+@import "./rwd.module.scss";
 
 * {
   margin: 0;
