--- a/src/styles/component/header.scss
+++ b/src/styles/component/header.scss
@@ -1,3 +1,4 @@
+@use "../rwd.module.scss" as rwd;
 .header {
   z-index: 99;
   position: fixed;
@@ -9,6 +10,17 @@
   background: #7b3d98;
   padding: 0 25px 0 15px;
 
+  @include rwd.mobile {
+    justify-content: space-between;
+  }
+
+  .header-option {
+    display: none;
+
+    @include rwd.mobile {
+      display: block;
+    }
+  }
   .header-logo {
     font-family: "Roboto";
     font-style: normal;
@@ -18,7 +30,7 @@
   }
   .header-search-bar-wrapper {
     flex: 1;
-    margin-left: 25px;
+    margin: 0 25px;
     .header-search-bar {
       display: flex;
       align-items: center;
@@ -57,13 +69,28 @@
         border-radius: 10px;
       }
     }
+
+    @include rwd.mobile {
+      display: none;
+    }
   }
-  .header-buttons {
+  .header-buttons-wrapper {
     position: relative;
     height: 100%;
     display: flex;
     align-items: center;
     gap: 18px;
+
+    .header-buttons-function {
+      flex: 1;
+      display: flex;
+      justify-content: space-around;
+      gap: 18px;
+
+      @include rwd.mobile {
+        display: none;
+      }
+    }
 
     .header-buttons-dropdown {
       position: absolute;
