--- a/src/styles/component/home.scss
+++ b/src/styles/component/home.scss
@@ -1,14 +1,23 @@
+@use "../rwd.module.scss" as rwd;
 .home {
   position: relative;
   display: flex;
-
-  top: 57px;
   min-height: calc(100vh - 57px);
   background: rgba(189, 78, 199, 0.17);
-  padding: 33px 44px 96px 37px;
+  padding: 0px 44px 96px 0px;
+
+  @include rwd.mobile {
+    justify-content: space-between;
+    padding: 0 0px 96px 0px;
+  }
+
   .home-left-nav-bar {
-    width: 200px;
-    margin-right: 22px;
+    min-width: 200px;
+    margin-top: 57px;
+
+    padding: 15px 20px 0 22px;
+    font-size: 18px;
+
     & > ul {
       width: 100%;
       padding: 0 25px;
@@ -22,7 +31,6 @@
       font-family: "Roboto";
       font-style: normal;
       font-weight: 700;
-      font-size: 18px;
       line-height: 22px;
       letter-spacing: 0.14em;
 
@@ -37,9 +45,11 @@
         align-items: center;
         gap: 12px;
       }
+
+      // title前的圓點
       & > li div {
-        width: 12px;
-        height: 12px;
+        min-width: 12px;
+        min-height: 12px;
         background: #7b3d98;
         border-radius: 50%;
       }
@@ -52,29 +62,43 @@
       font-family: "Roboto";
       font-style: normal;
       font-weight: 400;
-      font-size: 18px;
       line-height: 22px;
       letter-spacing: 0.14em;
       gap: 10px;
       color: #7b3d98;
       margin-top: 23px;
-      //   margin-right: 30px;
       & > li {
         display: flex;
         align-items: center;
         gap: 12px;
       }
+
+      // title前的圓點
       & > li div {
-        width: 8px;
-        height: 8px;
+        min-width: 8px;
+        min-height: 8px;
         background: #9762af;
         border-radius: 50%;
       }
     }
+
+    @include rwd.ipad {
+      font-size: 14px;
+    }
+    @include rwd.mobile {
+      display: none;
+    }
   }
 
   .home-content {
+    padding-top: 15px;
+    margin-top: 57px;
+    margin-left: 20px;
     width: 100%;
+
+    @include rwd.mobile {
+      justify-content: space-between;
+    }
   }
 
   .home-content-carousel {
@@ -83,20 +107,66 @@
     }
   }
 
-  .home-content-food {
-    .home-content-food-carousel {
-      & > img {
-        width: 100%;
-      }
-    }
-  }
   .home-content-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 18px;
     & > .card-hot {
       width: calc(100% / 4 - (28px * 3 / 4));
+      min-width: 160px;
+
+      @include rwd.ipad {
+        width: calc(100% / 3 - (28px * 3 / 4));
+        font-size: 18px;
+      }
+      @include rwd.mobile {
+        & .card-container {
+          flex-direction: row;
+          .card-img {
+            max-width: 40%;
+          }
+          .card-preview-text {
+            padding: 0 10%;
+          }
+          .card-stroke-img {
+            margin: 0 10px 10px 0;
+            align-items: flex-end;
+            width: auto;
+            height: 100%;
+          }
+        }
+        width: calc(100%);
+        font-size: 13px;
+      }
+    }
+    & > .card-food {
+      width: calc(100% / 4 - (28px * 3 / 4));
+      min-width: 160px;
+
+      @include rwd.ipad {
+        width: calc(100% / 3 - (28px * 3 / 4));
+        font-size: 18px;
+      }
+      @include rwd.mobile {
+        & .card-container {
+          flex-direction: row;
+          position: relative;
+          .card-img {
+            max-width: 40%;
+          }
+          .card-preview-title {
+            text-align: center;
+          }
+          .card-rate {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+          }
+        }
+        width: calc(100%);
+        font-size: 13px;
+      }
     }
   }
   .home-content-hot {
@@ -108,6 +178,14 @@
       letter-spacing: 0.14em;
       margin-bottom: 32px;
       color: #6e268f;
+
+      @include rwd.ipad {
+        font-size: 18px;
+      }
+    }
+
+    @include rwd.mobile {
+      padding: 0px 33px 0px 33px;
     }
   }
   .home-content-food {
@@ -119,29 +197,57 @@
       letter-spacing: 0.14em;
       margin-bottom: 32px;
       color: #6e268f;
+
+      @include rwd.ipad {
+        font-size: 18px;
+      }
+    }
+    .home-content-food-carousel {
+      & > img {
+        width: 100%;
+      }
+    }
+    @include rwd.mobile {
+      padding: 0px 33px 0px 33px;
     }
   }
   .home-popup-mask {
     display: flex;
     justify-content: center;
-    // align-items: center;
     z-index: 10;
     position: absolute;
     top: 0;
     right: 0;
+    // TODO Fix width
+
     width: calc(100% - 200px);
     height: 100%;
     background: rgba(255, 255, 255, 0.8);
 
+    @include rwd.mobile {
+      width: 100%;
+    }
+    .home-popup {
+      display: flex;
+      justify-content: center;
+      height: 100vh;
+    }
     .home-popup-window {
       top: 100px;
       left: 0;
       position: relative;
-      width: 985px;
-      height: auto;
+      max-width: 985px;
+      height: fit-content;
       background: #f6ebf8;
       border-radius: 40px;
       padding: 82px 84px 76px 90px;
+
+      @include rwd.ipad {
+        width: 80%;
+      }
+      @include rwd.mobile {
+        width: 80%;
+      }
       .home-popup-arrow-icon {
         cursor: pointer;
         position: absolute;
