--- a/src/styles/component/post.scss
+++ b/src/styles/component/post.scss
@@ -1,22 +1,29 @@
+@use "../rwd.module.scss" as rwd;
 .post {
   top: 57px;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: rgba(189, 78, 199, 0.2);
-  padding: 30px 0;
+
   .post-window {
-    margin-top: 5rem;
     display: flex;
     flex-direction: column;
 
     background: #ffffff;
     border-radius: 50px;
-    width: 968px;
-    height: 842px;
+    max-width: 968px;
+    width: 80%;
+    max-height: 842px;
+    height: 80%;
     padding: 57px 41px 30px 69px;
+
+    @include rwd.mobile {
+      max-width: 968px;
+      width: 90%;
+    }
 
     .post-window-bar {
       & > ul {
@@ -36,6 +43,10 @@
           letter-spacing: 0.1em;
           padding: 0 10px;
           color: #7b3d98;
+
+          @include rwd.ipad {
+            font-size: 18px;
+          }
         }
         li.active {
           border-bottom: 3px solid #7b3d98;
@@ -48,6 +59,7 @@
       justify-content: space-between;
       align-items: center;
       margin: 25px 0 25px 0;
+      font-size: 12px;
 
       .post-window-select-bar-selecter {
         display: flex;
@@ -63,7 +75,6 @@
           font-family: "Roboto";
           font-style: normal;
           font-weight: 500;
-          font-size: 12px;
           letter-spacing: 0.1em;
           background: rgba(189, 78, 199, 0.17);
           border-radius: 5px;
@@ -90,7 +101,6 @@
             font-family: "Roboto";
             font-style: normal;
             font-weight: 500;
-            font-size: 12px;
 
             letter-spacing: 0.1em;
 
@@ -146,6 +156,7 @@
       .post-window-content-title {
         margin-bottom: 41px;
         & > input {
+          width: 100%;
           outline: none;
           font-family: "Roboto";
           font-style: normal;
@@ -155,20 +166,18 @@
           letter-spacing: 0.1em;
           border: none;
           color: rgba(123, 61, 152, 0.3);
+
+          @include rwd.ipad {
+            font-size: 32px;
+          }
         }
         & > input::placeholder {
-          font-family: "Roboto";
-          font-style: normal;
-          font-weight: 600;
-          font-size: 36px;
-          line-height: 42px;
-          letter-spacing: 0.1em;
-          border: none;
           color: rgba(123, 61, 152, 0.3);
         }
       }
       .post-window-content-body {
         & > textarea {
+          width: 100%;
           resize: none;
           outline: none;
           font-family: "Roboto";
@@ -184,15 +193,11 @@
           border: none;
         }
         & > textarea::placeholder {
-          font-family: "Roboto";
-          font-style: normal;
-          font-weight: 500;
-          font-size: 24px;
-          /* identical to box height */
-
-          letter-spacing: 0.1em;
-
           color: rgba(123, 61, 152, 0.2);
+
+          @include rwd.ipad {
+            font-size: 20px;
+          }
         }
       }
     }
@@ -206,6 +211,10 @@
       font-weight: 500;
       font-size: 24px;
       line-height: 28px;
+
+      @include rwd.ipad {
+        font-size: 14px;
+      }
 
       .post-window-buttons-input {
         & > img {
